Refine README content and formatting
Updated README to enhance clarity and fix formatting issues.